<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="first_app">Spotify Streamer</string>
    <string name="second_app">Football Scores</string>
    <string name="third_app">Library</string>
    <string name="fourth_app">Build It Bigger</string>
    <string name="capstone_app">Capstone</string>
</resources>
